# RepoRadar

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  local_server.py  routes_analyze.py  routes_reports.py  routes_repos.py
app/core/: config.py  errors.py  logging.py
app/db/: database.py
app/models/: repo.py  report.py  skill_card.py
app/providers/: __init__.py  github_mcp_provider.py  github_rest_provider.py  llm_base.py  openai_provider.py
app/services/: cache.py  capability_extractor.py  evidence_verifier.py  github_search.py  idea_analysis.py  llm_candidate_reviewer.py  llm_json.py  llm_query_planner.py  localization.py  query_understanding.py  repo_collector.py  report_generator.py  report_payload.py  reuse_advisor.py  scoring.py  skill_card_cache.py
examples/: idea_ai_translation.txt  idea_tts_audiobook.txt  sample_report.md
frontend/: app.js  index.html  streamlit_app.py  styles.css
frontend/js/: api.js  app.js  candidate-views.js  formatters.js  i18n.js  report.js  sample-data.js
scripts/: analyze_idea.py  export_report.py  fetch_repo.py  serve_frontend.py
tests/: test_bootstrap.py  test_capability_extractor.py  test_evidence_verifier.py  test_export_report.py  test_frontend_assets.py  test_github_rest_provider.py  test_github_search.py  test_idea_analysis.py  test_llm_services.py  test_local_server.py  test_localization.py  test_openai_provider.py  test_query_understanding.py  test_repo_collector.py  test_report_generator.py  test_scoring.py  test_skill_card_cache.py
(+1 files in other folders)
